# drf_project

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  payments.json  pyproject.toml  requirements.txt  services.py  test_data.json
.github/workflows/: ci.yml
.venv1/: pyvenv.cfg
config/: celery.py  settings.py  urls.py
lms/: constants.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/management/commands/: clear_db.py  load_payments.py  moderators.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_coursesubscription.py  0004_course_subscribers.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username_customuser_avatar_and_more.py  0003_alter_customuser_options_alter_customuser_avatar.py  0004_payment.py  0005_alter_payment_options_alter_payment_amount_and_more.py  0006_payment_link_payment_session_id.py  0007_alter_payment_payment_method.py  0008_alter_payment_payment_method.py  0009_alter_payment_payment_method.py  0010_alter_payment_payment_method.py  0011_alter_payment_payment_method.py  0012_alter_payment_payment_method.py  0013_alter_payment_payment_method.py
users/templates/: finish_payment.html
