[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["Dmitry_Bezgubov <dmitrij-bezgubov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
djangorestframework = "^3.15.2"
dotenv = "^0.9.9"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
djangorestframework-simplejwt = "^5.5.0"
coverage = "^7.8.0"
drf-yasg = "^1.21.10"
forex-python = "^1.8"
requires = "^0.10.5"
ipython = "^9.1.0"
celery = "^5.5.1"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
